Bug 409674 - "No leak logging for DOM windows or documents" [p=wgianopoulos@yahoo.com (Bill Gianopoulos) r+sr=dbaron a1.9=beltzner]